--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.0",
+    "gulp-useref": "^3.1.3",
     "jshint": "^2.9.4",
     "mkdirp": "^0.5.1"
   },
@@ -37,6 +38,9 @@
     "cross-spawn": "^5.1.0",
     "eslint-plugin-html": "^3.2.2",
     "gulp-content-includer": "0.0.7",
+    "gulp-file-include": "^1.2.0",
+    "gulp-rev": "^8.1.0",
+    "gulp-rev-collector": "^1.2.3",
     "node-sass": "^4.7.2",
     "save-dev": "^2.0.0"
   }
